# automatic-claude-code

./: .dockerignore  .env.development  .env.example  .env.production.example  .eslintrc.json  .eslintrc.production.json  .gitignore  .mcp.json  .tmp_test_file  Agent-Coordination-Patterns (gemini aistudio).md  Agent-Coordination-Patterns (grok).md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_RESEARCH_PROMPT.md  CONPTY-SETUP-COMPLETE.md  CONTINUE_PROMPT.md  CONTINUE_PROMPT_2.md  CONTINUE_PROMPT_3.md  DASHBOARD_INTEGRATION_REPORT.md  DEMO_SYSTEM_SUMMARY.md  DEVELOPMENT.md  DEV_SETUP.md  DOCKER.md  DOCUMENTATION-UPDATE-SUMMARY.md  DOCUMENTATION_UPDATES_SUMMARY.md  DUAL-AGENT-TEST-SUMMARY.md  Dockerfile  Dockerfile.hooks  EMERGENCY_COURSE_CORRECTION.md  GEMINI.md  KAFKA_CLIENT_IMPLEMENTATION.md  NEW_SESSION_PROMPT_CLI_INTEGRATION.md  NEW_SESSION_PROMPT_DOCS_REORG.md  PLATFORM_STARTUP_GUIDE.md  PR_TEMPLATE.md  PTY-IMPLEMENTATION-COMPLETION-SUMMARY.md  PYTHON_SDK_BUG_FIX_SUMMARY.md  QUICK-SETUP.md  QUICK_START.md  README-claude-cli.md  (+78 more)
.claude/: CLAUDE.md  (+2 more)
python-sdk/: .bandit  .coverage  .dockerignore  .pre-commit-config.yaml  AUTHENTICATION_SETUP_GUIDE.md  CHANGELOG.md  CLI_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  CROSS_PLATFORM_REPORT.md  DOCKER.md  Dockerfile  Dockerfile.dev  INTEGRATION_TESTING_GUIDE.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_SUMMARY.md  MANIFEST.in  MIGRATION.md  QUICKSTART.md  README.md  SDK_DEBUG_COMPLETE.md  SECURITY.md  TASK_1_COMPLETION_REPORT.md  TASK_2_COMPLETION_REPORT.md  TASK_3_COMPLETION_REPORT.md  TOOL_OPERATIONS_TEST_RESULTS.md  USAGE_GUIDE.md  WRAPPER_TESTING_GUIDE.md  agent_websocket_bridge.py  benchmark_results.json  benchmark_summary.py  bmad_agent_integration.py  bmad_po_demo.py  check_auth.py  claude_cli_wrapper.py  claude_cli_wrapper_backup.py  claude_diagnose.py  comprehensive_integration_test.py  comprehensive_test.py  debug_claude_connection.py  debug_claude_output.py  (+84 more)
python-sdk/.github/: pull_request_template.md
python-sdk/.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.yml
python-sdk/api/: __init__.py
python-sdk/api/websocket/: README.md  __init__.py  agent_manager.py  client.py  connection_manager.py  message_protocol.py  server.py
python-sdk/benchmarks/: README.md  __init__.py  async_benchmarks.py  comparison_benchmarks.py  generate_charts.py  memory_benchmarks.py  performance_benchmarks.py  requirements.txt  run_benchmarks.py
python-sdk/claude_code_sdk/: __init__.py  client.py  exceptions.py  py.typed  query.py  session.py
python-sdk/claude_code_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python-sdk/claude_code_sdk/core/: __init__.py  client.py  messages.py  messages.py.bak  options.py  simple_client.py
python-sdk/claude_code_sdk/exceptions/: __init__.py  __init__.py.bak  errors.py
python-sdk/communication/: README.md  __init__.py  integration_demo.py  message_router.py  protocol.py  quality_framework.py  serialization.py  state_manager.py
python-sdk/docs/: BREAKING_CHANGES_POLICY.md  CRITICAL_BUG_FIX_v1.1.1.md  Makefile  VERSION_STRATEGY.md  api-reference.md  api-reference.rst  api.md  architecture.md  changelog.md  conf.py  getting-started.rst  index.rst  integration-guide.md  make.bat  migration.md  quickstart.md  release_process.md  testing-procedures.md  troubleshooting.md
python-sdk/examples/: 01_simple_query.py  02_streaming_example.py  03_multi_model_comparison.py  04_tool_usage_example.py  05_error_handling_example.py  README.md  advanced_streaming.py  basic_usage.py  enhanced_cli_wrapper_demo.py  enhanced_resource_management_demo.py  error_handling_retry.py  integration_with_automatic_claude.py  mcp_tool_integration.py  multi_turn_conversation.py  password_reset_README.md  password_reset_implementation.py  simple_resource_demo.py
python-sdk/kubernetes/: deployment.yaml  ingress.yaml
python-sdk/metrics/: README.md  dashboard.py  setup.py
python-sdk/multi_agent_wrapper/: README.md  __init__.py  agent_pool.py  communication_bridge.py  demo_multi_agent.py  health_monitor.py  multi_agent_wrapper.py
python-sdk/scripts/: bump_version.py  docker-build.sh  docker-push.sh
python-sdk/security/: SECURITY.md  security_best_practices.md
python-sdk/tests/: test_async_resource_management.py  test_authentication_robustness.py  test_claude_cli_wrapper.py  test_cli_wrappers.py  test_password_reset.py
(+1157 files in other folders)
